<resources>
    <string name="app_name">HHCustomBasis</string>
    <string name="connection_error">Can\'t connect to the server</string>
    <string name="internal_error">Internal error. Please try again later.</string>
    <string name="find">Найти</string>
    <string name="Exclude">Исключить</string>
    <string name="in_name">В названиях</string>
    <string name="in_description">В описании</string>
    <string name="in_the_company_name">В названиях компаний</string>
    <string name="region">Регион</string>
    <string name="first_symbols">Введите первые символы названия</string>
    <string name="salary">Зарплата</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="experience">Опыт</string>
    <string name="not_matter">Не важно</string>
    <string name="no_experience">Нет опыта</string>
    <string name="between_1_3">До 3-х лет</string>
    <string name="between_3_6">3–6 лет</string>
    <string name="more_than_6">Более 6 лет</string>
    <string name="work_schedule">График работы</string>
    <string name="remote">Удаленная работа</string>
    <string name="full_day">Полный день</string>
    <string name="flexible">Гибкий график</string>
    <string name="fly_in_fly_out">Вахта</string>
    <string name="period">Период</string>
    <string name="numbers_of_days"> дней</string>
    <string name="shift">Сменный график</string>
    <string name="industries">Сферы деятельности:</string>
    <string name="hh_ru_page">Вакансия на hh.ru</string>
    <string name="please_wait">Пожалуйста подождите</string>
    <string name="try_again">Попробовать снова</string>
    <string name="company">Прямой работодатель</string>
    <string name="agency">Кадровое агентство</string>
    <string name="project_director">Руководитель проекта</string>
    <string name="private_recruiter">Частный рекрутер</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_in">Размещено в </string>
    <string name="required_experience">Требуемый опыт: </string>
    <string name="temporary">Возможно временное оформление</string>
    <string name="oops">Что-то пошло не так\nНе получается загрузить данные</string>
    <string name="goToSearch">Вернуться к поиску</string>
    <string name="search_menu_title">ПОИСК</string>
    <string name="exit_menu_title">ВЫХОД</string>
    <string name="see_in_browser">Смотреть в браузере</string>
    <string name="hh_ru_company">Компания на hh.ru</string>
    <string name="search">Поиск</string>
</resources>