<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/waitLayout"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"

    tools:visibility="visible"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:indeterminateOnly="true"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:visibility="gone"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/oops"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/teal_200"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tryAgainButton"

        android:visibility="gone"
        tools:visibility="visible"
        />

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"

        android:layout_marginTop="2dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/messageTextView"
        app:layout_constraintBottom_toTopOf="@id/goBackButton"

        android:visibility="gone"
        tools:visibility="visible"
        />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToSearch"

        android:layout_marginTop="2dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tryAgainButton"
        app:layout_constraintBottom_toBottomOf="parent"

        android:visibility="gone"
        tools:visibility="visible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
