<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.vacancy.VacancyFragment"

    android:background="@drawable/search_background"
    >

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/vacancyCardView"
                style="@style/CardViewStyle"
                android:layout_margin="8dp"
                tools:visibility="visible"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="24sp"

                        android:layout_margin="8dp"

                        tools:text="Name Name Name Name Name Name Name Name Name Name Name "
                        />

                    <TextView
                        android:id="@+id/salaryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"

                        android:layout_margin="8dp"

                        tools:text="100000 - 1000000"
                        />

                    <Button
                        android:id="@+id/employerNameButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?attr/materialButtonOutlinedStyle"

                        android:textAllCaps="false"
                        android:lines="1"
                        android:ellipsize="end"

                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"

                        tools:text="Employer Name Employer Name Employer Name "
                        />

                    <TextView
                        android:id="@+id/areaTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/place_in"

                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"

                        tools:text="Размещено в Москова"
                        />

                    <TextView
                        android:id="@+id/experienceTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/required_experience"

                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        />

                    <TextView
                        android:id="@+id/employmentAndScheduleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="8dp"

                        tools:text="Полная занятость, удаленная работа"
                        />

                    <TextView
                        android:id="@+id/temporaryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temporary"

                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        />

                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_margin="8dp"

                        tools:text="tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta tra-ta-ta "
                        />

                    <Button
                        android:id="@+id/alternateUrlButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="?attr/materialButtonOutlinedStyle"
                        android:text="@string/hh_ru_page"

                        android:layout_margin="8dp"

                        app:layout_constraintStart_toStartOf="@id/siteUrlButton"
                        app:layout_constraintTop_toBottomOf="@id/industriesTextView"
                        />

                    <Button
                        android:id="@+id/vacancyFromBrowserButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="?attr/materialButtonOutlinedStyle"
                        android:text="@string/see_in_browser"

                        android:layout_margin="8dp"

                        app:layout_constraintStart_toStartOf="@id/siteUrlButton"
                        app:layout_constraintTop_toBottomOf="@id/alternateUrlButton"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

    </ScrollView>

    <LinearLayout
        android:id="@+id/waitLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="72dp"
        tools:visibility="invisible"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/spinner_ring"
            android:indeterminateOnly="true"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_wait"
            android:textStyle="bold|italic"
            android:textSize="18sp"
            android:textColor="@color/teal_200"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="32dp"
        tools:visibility="invisible"
    >

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:textSize="18sp"
            android:textColor="@color/teal_200"
            android:layout_margin="8dp"
            tools:text="Error Error Error Error Error Error Error Error Error Error "
        />

        <Button
            android:id="@+id/tryAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/try_again"
        />

    </LinearLayout>

</FrameLayout>